@@ -73,6 +73,8 @@ int PComplete(char *str,int buf_size);
 int PTruthCallStr(PyObject *object,char *method,char *argument);
 int PPovrayRender(char *header,char *inp,char *file,int width,int height,int antialias);
 
+PyObject *GetBondsDict(void);
+
 extern PyObject *P_globals;
 
 extern PyObject *P_cmd;
